PR/18150: John F. Woods: Print meaningful error messages on inconsistent/ corrupt entries.